# esg

./: CMakeLists.txt
cmake/modules/: FindLibgadu.cmake
include/: connection_manager.hpp  database-inl.hpp  database.hpp  gg_connection.hpp  gg_server.hpp  logging.hpp
scripts/: appmsg.py
src/: connection_manager.cpp  database.cpp  gg_connection.cpp  gg_server.cpp  main.cpp
